--- a/report.html
+++ b/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,113307],[],[[4,0,0,[],[1,309,40923],[]],[5,0,0,[],[1,41232,50810],[]],[6,0,0,[],[1,92042,21264],[]]],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,156119],[],[[4,0,0,[],[1,316,53258],[]],[5,0,0,[],[1,53575,77029],[]],[6,0,0,[],[1,130605,25513],[]]],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*FWQAChallenge","*C:\\QA\\venv\\FWQAChallange\\FWQAChallenge.robot","*FWQAChallenge.robot","*Testcase1-Register_Fastwork","*Testcase2-Signin_Fastwork","*Testcase3-Testcase3-Testcase3-Search_System"]);
+window.output["strings"] = window.output["strings"].concat(["*","*FWQAChallenge","*C:\\QA\\venv\\FWQAChallange\\FWQAChallenge.robot","*FWQAChallenge.robot","*Testcase1-Register_Fastwork","*Testcase2-Signin_Fastwork","*Testcase3-Search_System"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:53","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:01:53","fail":0,"id":"s1","label":"FWQAChallenge","name":"FWQAChallenge","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:02:36","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:02:36","fail":0,"id":"s1","label":"FWQAChallenge","name":"FWQAChallenge","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1637165018365;
+window.output["baseMillis"] = 1637221155771;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 113394;
+window.output["generated"] = 156182;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
